--- a/navbar-css-only.html
+++ b/navbar-css-only.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <div class="top-bar">
+            <!-- SIDE NAVIGATION BAR -->
             <input type="checkbox" name="toggle-checkbox" id="toggle-checkbox" class="hide">
             <label class="sidebar-checkbox-label" for="toggle-checkbox">
                 <div class="menu-toggle-button">
@@ -64,8 +65,8 @@
                 <!-- TOP MENU ABOUT -->
                 <div class="menu-item-top">ABOUT</div>
                 <!-- TOP MENU PRODUCTS -->
-                <input type="checkbox" name="products-checkbox" id="products-checkbox" class="hide">
-                <label for="products-checkbox" class="menu-item-top">PRODUCTS 
+                <input type="checkbox" name="products-checkbox-full-width" id="products-checkbox-full-width" class="hide">
+                <label for="products-checkbox-full-width" class="menu-item-top">PRODUCTS 
                     <span class="arrow-down">&#9660;</span>
                     <span class="arrow-up">&#9650;</span>
                         <div class="navbar-full-width-additional">
@@ -77,8 +78,8 @@
                     </div>
                 </label>
                 <!-- TOP MENU VISION -->
-                <input type="checkbox" name="vision-checkbox" id="vision-checkbox" class="hide">
-                <label for="vision-checkbox" class="menu-item-top">VISION 
+                <input type="checkbox" name="vision-checkbox-full-width" id="vision-checkbox-full-width" class="hide">
+                <label for="vision-checkbox-full-width" class="menu-item-top">VISION 
                     <span class="arrow-down">&#9660;</span>
                     <span class="arrow-up">&#9650;</span>
                     <div class="navbar-full-width-additional">
