--- a/navbar-css-only.html
+++ b/navbar-css-only.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
     <head>
         <title>Responsive CSS-only navigation for touch devices</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
         <link href="https://fonts.googleapis.com/css?family=Karla&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
